refactor: mapper를 통해 DTO 변환하도록 변경